<resources>
    <string name="app_name">Messaging App</string>
    <string name="hello_guys">Hello Guys!</string>
    <string name="intro_signin">Fill your details or continue with social media</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SignIn</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="or">----------Or---------</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="register_account">Register Account</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="signup">SignUp</string>
    <string name="forgot_password">Enter your Email account to reset your password</string>
    <string name="send_otp_code">Send OTP Code</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_message">Please check your email to see the verification code</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="fill_your_new_password_and_confirm_it">Fill your new password and confirm it</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="avatar">avatar</string>
    <string name="phone_number">Phone Number?</string>
    <string name="choose_gender">Choose Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gay">Gay</string>
    <string name="les">Les</string>
    <string name="date_of_birth">Date Of Birth?</string>
    <string name="let_start">Let Start</string>
    <string name="ok">Ok</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="recent_chat">Recent Chat</string>
    <string name="nam_pk">Nam Pk</string>
    <string name="lastet_message">lastet message</string>
    <string name="_20_18_pm">20:18 PM</string>
    <string name="_5">5</string>
</resources>