<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
           <androidx.cardview.widget.CardView
               android:layout_width="50dp"
               android:layout_height="50dp"
               app:cardCornerRadius="25dp"
               android:layout_margin="8dp"
               >
               <ImageView
                   android:id="@+id/imv_avatar"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:src="@drawable/profile_gray"
                   />

           </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/car_status"
                android:layout_width="10dp"
                android:layout_height="10dp"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="5dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardElevation="7dp"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="2"
            android:layout_marginVertical="6dp"
            >
            <TextView
                android:id="@+id/tv_nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nam_pk"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tv_last_mesage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastet_message"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp"
            >
            <TextView
                android:id="@+id/tv_last_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_20_18_pm"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/car_status_seen"
                android:layout_marginTop="4dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="#2F80ED"
                android:visibility="visible"
                >
                <TextView
                    android:id="@+id/tv_number_unseen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_5"
                    android:textColor="@color/white"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>